# numpy_ml

./: README.md  pyproject.toml
algorithms/: activation_functions.py  activision_functions.py  cross_validation.py  distance_metrics.py  evaluation.py  gradient_descent.py  k_nearest_neighbor.py  kmeans.py  linear_regression.py  logistic_regression.py  loss_function.py  model_abstract.py  nerual_network.py  neural_network_layer.py  normaliser.py  polynomial_logistic_regression.py  regularization.py  standardizer.py
algorithms/neural_networks/: binary_classification_nerual_network.py  linear_layer.py  linear_neural_network.py  mult_classification_neural_network.py  multi_classification_neural_network.py  nerual_network.py  neural_network.py  neural_network_layer_abstract.py
docs/: 介绍.md  神经网络.md  线性回归.md  逻辑回归.md
jupyter/: binary_data_visualization.ipynb  evaluate_model.ipynb  float_overflow.ipynb  grid_search_fcnn_params.ipynb  linear_data_visualization.ipynb  mnist_visualization.ipynb  numpy_dot_product.ipynb  numpy_op.ipynb
src/: activision_functions.py  linear_regression.py  logistic_regression.py  loss_function.py  main.py  regularization.py  standardizer.py  test_data_gen.py
test_data_set/: cluster_points.py  concentric_circles_data.py  linear_data.py  mnist.py  spiral_data.py  test_data_gen.py  xor_data.py
