[project]
name = "numpy-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "notebook>=7.4.3",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "scipy>=1.13.1",
    "seaborn",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
